--- a/django_chat_app/chat/templates/chat/index.html
+++ b/django_chat_app/chat/templates/chat/index.html
@@ -38,9 +38,13 @@
         <div class="page-content">
             <!-- Textfield with Floating Label -->
 
-            <form action="#">
+            <form action="/chat/" method="post">
+                {% csrf_token %}
+                <!-- erzeugt ein verstecktes token vom typ hidden: type="hidden"
+                    dient der Zuweiseung der Nachrichten an den richtigen Chat
+                -->
                 <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                    <input class="mdl-textfield__input" type="text" id="sample3">
+                    <input class="mdl-textfield__input" name="txtmessage" type="text" id="sample3">
                     <label class="mdl-textfield__label" for="sample3">Text...</label>
                 </div>
                 <!-- Accent-colored raised button with ripple -->
