--- a/django_chat_app/chat/templates/auth/login.html
+++ b/django_chat_app/chat/templates/auth/login.html
@@ -1,6 +1,12 @@
 <h1>Login</h1>
 
+{% if wrongPassword %}
+    <p>Wrong username or password!</p>
+{% endif %}
+
 <form method="POST" action="/login/">
+    {% csrf_token %}
+    <input type="hidden" name="redirect" value="{{ redirect }}">
     <div><input name="username" type="text"></div>
     <div><input name="password" type="password"></div>
     <div><button>Login</button></div>
