finished videos but all of the optional tasks are open

--- a/django_chat_app/chat/templates/chat/index.html
+++ b/django_chat_app/chat/templates/chat/index.html
@@ -1,87 +1,64 @@
-<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
-<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+{% extends "base.html" %}
+{% block content %}
 
-<style>
-    .page-content{
-        padding:100px;
-    }
-    .dates{
-        color:#ff4081;
-        margin-right: 8px;
-        font-size: 8pt;
-    }
-</style>
+<!-- Textfield with Floating Label -->
 
-<!-- Always shows a header, even in smaller screens. -->
-<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
-    <header class="mdl-layout__header">
-        <div class="mdl-layout__header-row">
-            <!-- Title -->
-            <span class="mdl-layout-title">
-                {% if request.user.is_authenticated %}
-                    Welcome {{request.user.first_name}}
-                {% else %}
-                    Welcome! Please login
-                {% endif %}
-            </span>
-            <!-- Add spacer, to align navigation to the right -->
-            <div class="mdl-layout-spacer"></div>
-            <!-- Navigation. We hide it in small screens. -->
-            <nav class="mdl-navigation mdl-layout--large-screen-only">
-                <a class="mdl-navigation__link" href="">Link</a>
-                <a class="mdl-navigation__link" href="">Link</a>
-                <a class="mdl-navigation__link" href="">Link</a>
-                <a class="mdl-navigation__link" href="">Link</a>
-            </nav>
-        </div>
-    </header>
-    <div class="mdl-layout__drawer">
-        <span class="mdl-layout-title">Chats</span>
-        <nav class="mdl-navigation">
-            <a class="mdl-navigation__link" href="">Link</a>
-            <a class="mdl-navigation__link" href="">Link</a>
-            <a class="mdl-navigation__link" href="">Link</a>
-            <a class="mdl-navigation__link" href="">Link</a>
-        </nav>
-    </div>
-    <main class="mdl-layout__content">
-        <div class="page-content">
-            <!-- Textfield with Floating Label -->
-
-            {% if request.user.is_authenticated %}
+{% if request.user.is_authenticated %}
 
 
-            {% for message in messages %}
-            <div>
-                <i class="dates">[{{ message.created_at }}]</i><b>{{ message.author.first_name }}:</b> {{ message.text }}
-            </div>
-            {% endfor %}
-
-
-            <form action="/chat/" method="post">
-                {% csrf_token %}
-                <!-- erzeugt ein verstecktes token vom typ hidden: type="hidden"
-                    dient der Zuweiseung der Nachrichten an den richtigen Chat
-                -->
-                <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                    <input class="mdl-textfield__input" name="txtmessage" type="text" id="sample3">
-                    <label class="mdl-textfield__label" for="sample3">Text...</label>
-                </div>
-                <!-- Accent-colored raised button with ripple -->
-            <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
-                Button
-            </button>
-            </form>
-
-            {% else %}
-                <h2>Bitte einloggen!</h2>
-                <p>Du bist derzeit nicht eingeloggt. Nachrichten werden nur für eingeloggte Mitglieder angezeigt<br>
-                    Hier gehts zum <a href="/login/">Login</a>
-                </p>
-
-            {% endif %}
-
-        </div>
-    </main>
+{% for message in messages %}
+<div id="messageContainer" >
+    <i class="dates">[{{ message.created_at }}]</i><b>{{ message.author.first_name }}:</b> {{ message.text }}
 </div>
+{% endfor %}
+
+<script>
+   async function sendMessage(){
+        let form = new FormData();
+        let token = '{{ csrf_token }}'
+        form.append('txtmessage',messageField.value);
+        form.append('csrfmiddlewaretoken', token);
+        try{
+            messageContainer.innerHTML += `
+                <div id="deleteMessage" class="all-gray">
+                    <i class="dates">[DATUM]</i><b>{{ request.user.first_name }}:</b> ${messageField.value}
+                </div>`;
+            await fetch('/chat/', {
+                method: 'POST',
+                body: form,
+            });
+            document.getElementById('deleteMessage').remove();
+            messageContainer.innerHTML += `
+                <div class="read">
+                    <i class="dates">[DATUM]</i><b>{{ request.user.first_name }}:</b> ${messageField.value}
+                </div>`;
+            console.log('message send!')
+        } catch(e){
+            console.error('ERROR', e);
+        }
+    }
+</script>
+
+<form onsubmit="sendMessage(); return false;" method="post">
+    {% csrf_token %}
+    <!-- erzeugt ein verstecktes token vom typ hidden: type="hidden"
+        dient der Zuweiseung der Nachrichten an den richtigen Chat
+    -->
+    <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+        <input class="mdl-textfield__input" name="txtmessage" type="text" id="messageField" placeholder="Message...">
+        <label class="mdl-textfield__label" for="messageField"></label>
+    </div>
+    <!-- Accent-colored raised button with ripple -->
+<button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
+    Button
+</button>
+</form>
+
+{% else %}
+    <h2>Bitte einloggen!</h2>
+    <p>Du bist derzeit nicht eingeloggt. Nachrichten werden nur für eingeloggte Mitglieder angezeigt<br>
+        Hier gehts zum <a href="/login/">Login</a>
+    </p>
+
+{% endif %}
+{% endblock %}
