--- a/django_chat_app/chat/templates/auth/login.html
+++ b/django_chat_app/chat/templates/auth/login.html
@@ -1,3 +1,6 @@
+{% extends "base.html" %}
+{% block content %}
+
 <h1>Login</h1>
 
 {% if wrongPassword %}
@@ -11,3 +14,5 @@
     <div><input name="password" type="password"></div>
     <div><button>Login</button></div>
 </form>
+
+{% endblock %}
